# FRED

./: fred-manager.txt
fred-client-2.4.1/: setup.cfg
fred-db-2.11.2/: ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac  fred-db.spec  fred-db.spec.in  fred-dbmanager.in  orderedsql.sh
fred-db-2.11.2/upgrades/: 1_7_1-1_8.sql  1_8-1_8_1.sql  1_8_1-1_8_2.sql  1_8_2-1_9_0.sql  1_9_0-2_0_0.sql  2.10.0-2.11.0-01-ddl.sql  2.10.0-2.11.0-02-dml.sql  2.10.0-2.11.0-03-ddl.sql  2.10.0-2.11.0-logger-ddl.sql  2.11.0-2.11.1-dml.sql  2.11.1-2.11.2-dml.sql  2.5.0-2.5.1-ddl.sql  2.5.0-2.5.1-dml.sql  2.5.1-2.6.0-ddl.sql  2.5.1-2.6.0-dml.sql  2.5.1-2.6.0-logger-ddl.sql  2.5.1-2.6.0-logger-dml.sql  2.6.0-2.7.0-ddl.sql  2.6.0-2.7.0-dml.sql  2.6.0-2.7.0-logger-dml.sql  2.7.0-2.8.0-ddl.sql  2.7.0-2.8.0-dml.sql  2.8.0-2.8.1-ddl.sql  2.8.0-2.8.1-dml.sql  2.8.1-2.8.2-dml.sql  2.8.1-2.9.0-01-prepare.sql  2.8.1-2.9.0-02-changes-ddl.sql  2.8.1-2.9.0-03-changes-dml.sql  2.8.1-2.9.0-04-finish-ddl.sql  2.9.0-2.10.0-ddl.sql  2.9.0-2.10.0-dml.sql  2_0_0-2_1_0.sql  2_1_0-2_1_0_1.sql  2_1_0_1-2_1_1.sql  2_1_1-2_1_2.sql  2_1_2-2_1_3.sql  2_1_3-2_1_4.sql  2_1_4-2_2_0.sql  2_2_0-2_3_0-ddl.sql  2_2_0-2_3_0-dml.sql  (+14 more)
fred-distutils-1.0.8/: PKG-INFO  setup.cfg  setup.py
fred-distutils-1.0.8/freddist/: __init__.py  core.py  dist.py  file_util.py  util.py  version.py
fred-doc2pdf-2.4.1/: ChangeLog  INSTALL_CS.ascii  INSTALL_CS.utf8  MANIFEST.in  PKG-INFO  README  README_CS.ascii  README_CS.utf8  fred-doc2pdf  setup.cfg  setup.cfg.template  setup.py
fred-doc2pdf-2.4.1/conf/: fred-doc2pdf.conf.install
fred-doc2pdf-2.4.1/examples/: advance_invoice.rml  advance_invoice.xml  auth_info.rml  auth_info.xml  consumed  helios.xml  invoice  invoice.rml  invoice.xml  mojeid_auth.xml  mojeid_auth_owner.rml  mojeid_auth_user.rml  mojeid_auth_user.xml  mojeid_validate.rml  mojeid_validate.xml  public_request.xml  test.sh  warning_letter1.rml  warning_letter1.xml  warning_letter2.rml  warning_letter2.xml
fred-doc2pdf-2.4.1/templates/: advance_invoice.xsl  auth_info.xsl  auth_info_cs.xml  auth_info_en.xml  authinfo_request_cs.xml  authinfo_request_en.xml  block_transfer_cs.xml  block_transfer_en.xml  block_update_cs.xml  block_update_en.xml  contact_verification_auth_owner.xsl  defunct_contacts.xsl  fred_advance_invoice.dtd  fred_invoice.dtd  helios.xsl  invoice.xsl  mojeid_auth_owner.xsl  mojeid_auth_user.xsl  mojeid_translation_cs.xml  mojeid_translation_en.xml  mojeid_validate.xsl  public_request.xsl  shared_templates.xsl  translation_cs.xml  translation_en.xml  unblock_transfer_cs.xml  unblock_transfer_en.xml  unblock_update_cs.xml  unblock_update_en.xml  warning_letter.xsl
fred-idl-2.11.0/: ChangeLog  Makefile.am  Makefile.in  configure  configure.ac  fred-idl.spec  fred-idl.spec.in
fred-idl-2.11.0/doc/: Doxyfile  docbook.xsl  mainpage.h
fred-idl-2.11.0/idl/: Admin.idl  EPP.idl  FileManager.idl  Filters.idl  Logger.idl  Mailer.idl  Messages.idl  MojeID.idl  Registry.idl  TechCheck.idl  Whois.idl  Zone.idl  ZoneGenerator.idl  _dataTypes.idl  ccReg.idl
fred-mod-corba-1.4.1/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  doxy.conf  fred-mod-corba.spec  fred-mod-corba.spec.in  mod_corba.c
fred-mod-corba-1.4.1/conf/: 01-fred-mod-corba-apache.conf  01-fred-mod-corba-apache.conf.in
fred-mod-eppd-2.9.0/: Makefile.in  aclocal.m4  config.h.in  configure  fred-mod-eppd.spec
fred-mod-eppd-2.9.0/conf/: 02-fred-mod-eppd-apache.conf
fred-mod-whoisd-3.5.0/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  doxy.conf  fred-mod-whoisd.spec  fred-mod-whoisd.spec.in  mod_whoisd.c  whois-client.c  whois-client.h
fred-mod-whoisd-3.5.0/conf/: 02-fred-mod-whoisd-apache.conf  02-fred-mod-whoisd-apache.conf.in
fred-mod-whoisd-3.5.0/unittests/: test_whois.py  test_whois.py.in
fred-pyfred-2.3.0/: ChangeLog  INSTALL  MANIFEST.in  PKG-INFO  README  setup.cfg  setup.cfg.template  setup.py
fred-pyfred-2.3.0/conf/: genzone.conf.install  pyfred.conf.install
fred-pyfred-2.3.0/misc/: template_sucker.py
fred-pyfred-2.3.0/pyfred/: __init__.py  dnssec.py  utils.py  zone.py
fred-pyfred-2.3.0/scripts/: check_pyfred_genzone  filemanager_admin_client  filemanager_client  fred-pyfred  genzone_client  mailer_admin_client  mailer_client  pyfredctl  techcheck_admin_client  techcheck_client
fred-pyfred-2.3.0/tc_scripts/: authoritative.py  autonomous.py  dnssec.py  dnsseckeychase.py  existance.py  heterogenous.py  presence.py  recursive.py  recursive4all.py
fred-pyfred-2.3.0/unittests/: README  create_environment.sh  test_filemanager.py  test_genzone.py  test_techcheck.py  zone-file-check
fred-pylogger-1.1.1/: PKG-INFO  setup.cfg  setup.py
fred-pylogger-1.1.1/pylogger/: corbalogger.py  corbarecoder.py  dummylogger.py
fred-server-2.11.2/: Makefile.in  aclocal.m4  config.h.in  configure  fred-server.spec
fred-server-2.11.2/config/: hpmail.conf  server.conf
fred-server-2.11.2/init-scripts/: fred-server
fred-transproc-1.1.1/: ChangeLog  MANIFEST.in  PKG-INFO  README  backend.xml  proc_csob_xml.py  proc_ebanka.py  proc_ebanka_csv.py  setup.cfg  setup.py  transproc  transproc.conf
fred-transproc-1.1.1/fred_transproc/: template.py
fred-webadmin-3.9.2/: MANIFEST.in  PKG-INFO  README  fred-webadmin-server.install  fred-webadmin.install  setup.cfg  setup.cfg.template  setup.py  webadmin_cfg.py.install
fred-webadmin-3.9.2/doc/: INSTALL.txt
fred-webadmin-3.9.2/fred_webadmin/: config.py  corba.py  corbalazy.py  corbarecoder.py  customview.py  exposed.py  info.py  itertable.py  mappings.py  menunode.py  nulltype.py  setuplog.py  translation.py  user.py  utils.py
fred-webadmin-3.9.2/locale/: adif.pot  cs_CZ.po  en_US.po  localegen.sh
fred-webadmin-3.9.2/tests/: testcorba.py  testcorba2.py
fred-whois-2.8.4/: ChangeLog  MANIFEST.in  PKG-INFO  README.txt  ccregproxy.py  corbaparser.py  dobradomena.py  setup.cfg  setup.cfg.template  setup.py  whois.py
fred-whois-2.8.4/CaptchaWhois/: Base.py  __init__.py
(+145 files in other folders)
